--- a/README
+++ b/README
@@ -50,7 +50,7 @@ Requirements For CSBB-v3.0::
 3) R   -> -> -> -> -> [Please install R on your machine from : https://www.r-project.org/]
    We recommend using R-3.3.3 or R-3.4.4 [CSBB-v3.0 is throughly tested with these R versions]
    CSBB-v3.0 installs all required R packages automatically and if required packages are not installed then running time of the 
-   module which require packages will increase [Only one time process] [CSBB-v3.0 automatically checks for latest updates for R packages as well]
+   module which require packages will increase [Only one time process] [CSBB-v3.0 automatically checks for latest updates for R packages]
 
 Note: 
 1) When you run CSBB-v3.0 first time, then please do run install module to automatically download files and install dependencies [tools/softwares]
